Fix additional white space on orientation buttons

--- a/style/style.css
+++ b/style/style.css
@@ -539,7 +539,7 @@ input::-moz-focus-outer {
 .orientation-btn-background-one {
   position: absolute;
   background-color: #ec3853;
-  width: 75px;
+  width: 76px;
   height: 26px;
   border-radius: 20px;
   top: 2px;
@@ -550,7 +550,7 @@ input::-moz-focus-outer {
 .orientation-btn-background-two {
   position: absolute;
   background-color: #ec3853;
-  width: 100px;
+  width: 101px;
   height: 26px;
   border-radius: 20px;
   top: 2px;
